<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/title_quiz"
        />
    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/ic_baseline_translate_24"
        android:title="@string/title_lists" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_baseline_reg_24"
        android:title="@string/title_register" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_logout_black_32dp"
        android:title="@string/title_logout" />

</menu>
