<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
<!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_white_24dp"-->
<!--        android:title="@string/title_home"-->
<!--        />-->
<!--    <item-->
<!--        android:id="@+id/navigation_search"-->
<!--        android:icon="@drawable/ic_search_white_24dp"-->
<!--        android:title="@string/title_serach" />-->

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/title_quiz"
        />
    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/ic_baseline_translate_24"
        android:title="@string/title_lists" />

    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_login"
        android:title="@string/title_login" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_baseline_reg_24"
        android:title="@string/title_register" />
</menu>
